--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="currentdate.js"></script>
-    <title>New Document</title>
+    <title>My Portal</title>
+    <meta name="description" content="Assignment portal for WDD230 that will show all the twelve projects that will be worked on the semester " />
+    <link href="styles/style.css" rel="stylesheet">
+    <script defer src="scripts/currentdate.js"></script>
 </head>
-<body>
-    <h1>Hello World!</h1>
-    <h2>Fall Semester</h2>
-    <p>Here we are to learn</p>
-</body>
+    <body>
+        <header>
+            <img class="image" src="images/profile pic.jpg">
+            <h1>Gloria Rosado</h1>
+        </header>
+    <section>
+        <h2>WDD230: Assignment Portal</h2>
+        <hr>
+        <ul>
+            <li>Lesson 02:</li>
+            <li>Lesson 03:</li>
+            <li>Lesson 04:</li>
+            <li>Lesson 05:</li>
+            <li>Lesson 06:</li>
+            <li>Lesson 07:</li>
+            <li>Lesson 08:</li>
+            <li>Lesson 09:</li>
+            <li>Lesson 10:</li>
+            <li>Lesson 11:</li>
+            <li>Lesson 12:</li>
+        </ul>
+        <hr>
+        <p class="line">Some lessons may need more than one activity/assignment link.</p>
+    </section> 
+      
+    <footer>
+        <p>&copy;2022 | Gloria Rosado | Costa Rica</p>
+        <p id="lastmod"></p>
+    </footer>
+    
+    </body>
 </html>
