--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
 </head>
     <body>
         <header>
-            <img class="image" src="images/profile pic.jpg">
+            <img class="photo" src="images/profile_pic.jpg" alt="my profile picture">
             <h1>Gloria Rosado</h1>
         </header>
     <section>
         <h2>WDD230: Assignment Portal</h2>
         <hr>
         <ul>
-            <li>Lesson 02:</li>
-            <li>Lesson 03:</li>
-            <li>Lesson 04:</li>
-            <li>Lesson 05:</li>
-            <li>Lesson 06:</li>
-            <li>Lesson 07:</li>
-            <li>Lesson 08:</li>
-            <li>Lesson 09:</li>
-            <li>Lesson 10:</li>
-            <li>Lesson 11:</li>
-            <li>Lesson 12:</li>
+            <li>Lesson 02:<a href=""> Title</a></li>
+            <li>Lesson 03:<a href=""> Title</a></li>
+            <li>Lesson 04:<a href=""> Title</a></li>
+            <li>Lesson 05:<a href=""> Title</a></li>
+            <li>Lesson 06:<a href=""> Title</a></li>
+            <li>Lesson 07:<a href=""> Title</a></li>
+            <li>Lesson 08:<a href=""> Title</a></li>
+            <li>Lesson 09:<a href=""> Title</a></li>
+            <li>Lesson 10:<a href=""> Title</a></li>
+            <li>Lesson 11:<a href=""> Title</a></li>
+            <li>Lesson 12:<a href=""> Title</a></li>      
+            
         </ul>
         <hr>
         <p class="line">Some lessons may need more than one activity/assignment link.</p>
