--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>My Portal</title>
     <meta name="description" content="Assignment portal for WDD230 that will show all the twelve projects that will be worked on the semester " />
     <link href="styles/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
     <script defer src="scripts/currentdate.js"></script>
 </head>
     <body>
