--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portal</title>
-    <meta name="description" content="Assignment portal for WDD230 that will show all the twelve projects that will be worked on the semester " />
-    <link href="styles/style.css" rel="stylesheet">
+    <meta name="description" content="Assignment portal for WDD230 that will show all the twelve projects that
+    will be worked on the semester "/>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Itim&family=Josefin+Sans:ital,wght@1,300&display=swap"
+    rel="stylesheet"> 
+    
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -17,10 +20,10 @@
 </head>
     <body>
         <header>
-            <img class="photo" src="images/profile_pic.jpg" alt="my profile picture">
+            <img class="photo" src="images/profile-pic.jpg" alt="Gloria Rosado">
             <h1>Gloria Rosado</h1>
         </header>
-    <section>
+    <main>
         <h2>WDD230: Assignment Portal</h2>
         <hr>
         <ul>
@@ -39,11 +42,11 @@
         </ul>
         <hr>
         <p class="line">Some lessons may need more than one activity/assignment link.</p>
-    </section> 
+    </main> 
 
     <footer>
         <p>&copy;2022 | Gloria Rosado | Costa Rica</p>
-        <p id="lastmod"></p>
+        <p id="last-mod"></p>
     </footer>
     </body>
 </html>
