--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </main> 
 
     <footer>
-        <p>&copy;2022 | Gloria Rosado | Costa Rica</p>
-        <p id="last-mod"></p>
+        <div class="date">&copy;<span id="currentYear">2022</span> Gloria Rosado | Costa Rica </div>
+        <span id="pageLastUpdated"></span>
     </footer>
     </body>
 </html>
