--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
     <body>
         <header>
-            <img class="photo" src="images/profile-pic.jpg" alt="Gloria Rosado">
+            <img class="photo" src="images/profile-pic.jpg" alt="Glo Pink">
             <h1>Gloria Rosado</h1>
         </header>
     <main>
