--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -42,8 +42,8 @@
     </main>
 
 <footer class="footer">
-    <div class="date">&copy;<span id="currentYear">2022</span> Gloria Rosado | Costa Rica </div>
-    <span id="pageLastUpdated"></span>
+    <div class="date">&copy;<span id="currentyear">2022</span> Gloria Rosado | Costa Rica </div>
+    <span id="pagelastupdated"></span>
 </footer>
 <script defer src="js/date.js"></script>
 </body>
