--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Itim&family=Josefin+Sans:ital,wght@1,300&display=swap"
     rel="stylesheet"> 
     
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <script defer src="scripts/currentdate.js"></script>
@@ -45,8 +45,8 @@
     </main> 
 
         <footer>
-            <div class="date">&copy;<span id="currentYear">2022</span> Gloria Rosado | Costa Rica </div>
-            <span id="pageLastUpdated"></span>
+            <div class="date">&copy;<span id="currentyear">2022</span> Gloria Rosado | Costa Rica </div>
+            <span id="pagelastupdated"></span>
         </footer>
     </body>
 </html>
