--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" src="images/logo_1.png" alt="main-logo">
+        <img class="header-logo" src="images/logo_1.png" alt="main-logo">
         <h1>Guapiles Chamber of Commerce</h1>   
     </header>
             <nav>
