--- a/chamber/index.html
+++ b/chamber/index.html
@@ -91,7 +91,7 @@
             </div>
         </div>
         <hr>
-        <div class="wdd-info">&copy;<span id="currentyear"></span> | Gloria Rosado | Costa Rica</div>
+        <div class="wdd-info">&copy;<span id="currentyear"></span> WDD230 | Gloria Rosado | Costa Rica</div>
         <span id="pagelastupdated"></span>
     </footer>
     <script src="js/date.js"></script>
