--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -37,10 +37,10 @@
             <p class="typography__text">Guapiles Chamber of Commerce website will use the 'Staaliches', cursive from Google fonts
                 along with some basic fonts if needed.</p>
             <div class="selectors">
-                <h1>Site Header</h1>
-                <h2>Heading 1</h2>
-                <h3>Heading 2</h3>
-                <h4>Heading 3</h4>
+                <h1>Site Header / Titles and header</h1>
+                <h2>Heading 1 / Subtitles</h2>
+                <h3>Heading 2 / Details</h3>
+                <h4>Heading 3 / Information</h4>
             <p>Paragraph</p>
             </div>
     </main>
