--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,6 +5,7 @@
     <meta name="author" content="Gloria Rosado">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Guapiles Chamber of Commerce</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <meta name="description" content="The page ot the Guapiles Chamber of Commerce">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="css/small.css" rel="stylesheet">
