--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
     rel="stylesheet"> 
 </head>
 <body>
-    <div id="banner"> 🤝🏼 Come join us for the chamber meet and greet Tuesdays at 6:00 p.m </div>
+    
     <header>
         <img src="images/logo-small-icon-only.png" alt="Utah Valley Chamber of Commerce logo" class="logo">
         <h1> Guapiles <span class="extra"><br> Chamber of Commerce </span></h1>
@@ -92,7 +92,7 @@
             </div>
         </div>
         <hr>
-        <div class="wdd-info">&copy;<span id="currentyear"></span> WDD230 | Gloria Rosado | Costa Rica</div>
+        <div class="wdd-info">&copy;<span id="currentyear"></span> | Gloria Rosado | Costa Rica | WDD230 </div>
         <span id="pagelastupdated"></span>
     </footer>
     <script src="js/date.js"></script>
