--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Gloria Rosado">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portal</title>
     <meta name="description" content="Assignment portal for WDD230 that will show all the twelve projects that
