--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Gloria Rosado">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Gloria Rosado">
     <title>Lesson 2</title>
-    <meta name="description" content="Some of the principles of web design"/>
-    
+    <meta name="description" content="Some of the principles of web design">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
