--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,7 +59,7 @@
                 <img src="images/icon-weather.png" alt="weather info" id="weathericon">
             </section>
             <section class="join">
-                
+                <h3>JOIN US</h3>
                 <img src="images/join.png" alt="join us" id="join">
                 <p>Want to join us? <br>No problem reach us at guapiles@chamber.org</p>
             </section>
