--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="banner">"🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m."</div>
     <header>
-        <img src="images/logo-small-icon-only-inverted.png" alt="Utah Valley Chamber of Commerce logo" class="logo">
+        <img src="images/logo-small-icon-only-inverted.png" alt="Guapiles Chamber of Commerce logo" class="logo">
         <h1> Guapiles <span class="extra"><br> Chamber of Commerce </span></h1>
         <div class="social">
             <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook logo" class="icon"></a>
