--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>Lesson 04:<a href="chamber/index.html"> Chamber of Commerce</a></li>
             <li>Lesson 05:<a href="bom/bom.html" > Book of Mormon Top 5/ Chamber of Commerce</a></li>
             <li>Lesson 05:<a href="chamber/index.html"> Content and Banner </a></li>
-            <li>Lesson 06:<a href=""> Title</a></li>
+            <li>Lesson 06:<a href="chamber/index.html"> Responsive Design</a></li>
             <li>Lesson 07:<a href=""> Title</a></li>
             <li>Lesson 08:<a href=""> Title</a></li>
             <li>Lesson 09:<a href=""> Title</a></li>
