--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,7 +63,7 @@
                 <h4><span id="current-temp"></span> &#176;F</h4>
                 <h5><span id="desc"></span></h5>
                 <p>Wind Speed:  <span id="speed"></span> mph</p>
-                <p>Wind Chill:  <span id="windchill"></span></p>t
+                <p>Wind Chill:  <span id="windchill"></span></p>
             </section>
             <section class="join">
                 <h3>JOIN US</h3>
