--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,7 +61,7 @@
                 <h3> WEATHER </h3>
                 <img src="images/icon-weather.png" alt="weather info" id="weathericon">
                 <h4><span id="current-temp"></span> &#176;F</h4>
-                <h5><span id="desc"></span></h5>
+                <h5><span id="desc">Temperature</span></h5>
                 <p>Wind Speed:  <span id="speed"></span> mph</p>
                 <p>Wind Chill:  <span id="windchill"></span></p>
             </section>
