--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,12 +45,12 @@
         <div class="home-main">
             <section class="hero">
                 <picture class="hero-photo">
-                    <source media="(max-width: 200px)" srcset="images/manzanillo-200px.jpg">
-                    <source media="(max-width: 400px)" srcset="images/manzanillo-400px.jpg">
-                    <source media="(max-width: 600px)" srcset="images/manzanillo-600px.jpg">
-                    <img src="images/manzanillo-800px.png" alt="manzanillo">
+                    <source media="(max-width: 200px)" srcset="images/small-200px.png">
+                    <source media="(max-width: 400px)" srcset="images/medium-400px.png">
+                    <source media="(max-width: 600px)" srcset="images/large-600px.png">
+                    <img src="images/wdd230-org(2).jpg" alt="wdd photo">
                 </picture>
-                <h2> Welcome to Guapiles </h2>
+                <!--<h2> Welcome to Guapiles </h2><select name="" id="" disabled="disabled"></select>-->
             </section>
             <section class="event">
                 <h3> EVENTS </h3>
