--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
 <body>
     
     <header>
-        <img src="images/logo-small-icon-only-inverted.png" alt="Guapiles Chamber of Commerce logo" class="logo">
+        <img src="images/logo-small-icon-only-inverted-webp.webp" alt="Guapiles Chamber of Commerce logo" class="logo">
         <h1> Guapiles <span class="extra"><br> Chamber of Commerce </span></h1>
         <div class="social">
             <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook logo" class="icon"></a>
@@ -101,7 +101,7 @@
     <footer>
         <div class="top-footer">
             <section class="company">
-                <img src="images/logo-small-icon-only-inverted.png" alt="Guapiles logo" class="logo">
+                <img src="images/logo-small-icon-only-inverted-webp.webp" alt="Guapiles logo" class="logo">
                 <h3> Guapiles Chamber of Commerce </h3>
                 <p> Centro de Convenciones Pococi</p>
             </section>
