--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
             <li>Lesson 02:<a href="lesson2/design-principles.html"> Design Principles</a></li>
             <li>Lesson 03:<a href="lesson3/index.html"> Web Plan Design </a></li>
             <li>Lesson 04:<a href="chamber/index.html"> Chamber of Commerce</a></li>
-            <li>Lesson 05:<a href="bom/bom.html" > Book of Mormon Top 5/ Chamber of Commerce</a></li>
-            <li>Lesson 05:<a href="chamber/index.html"> Content and Banner </a></li>
+            <li>Lesson 05:<a href="bom/bom.html"> Book of Mormon Top 5</a> | <a href="chamber/index.html">Content and Banner</a></li>
             <li>Lesson 06:<a href="chamber/index.html"> Responsive Design</a></li>
-            <li>Lesson 07:<a href=""> Title</a></li>
+            <li>Lesson 07:<a href="lesson7/lazyload.html">Lazy Load Images</a></li>
             <li>Lesson 08:<a href=""> Title</a></li>
             <li>Lesson 09:<a href=""> Title</a></li>
             <li>Lesson 10:<a href=""> Title</a></li>
