--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -92,7 +92,7 @@
     </footer>
     <script src="js/date.js"></script>
     <script src="js/ham.js"></script>
-    <script src="js/windchill.js"></script>
+    <script src="js/pagevisited.js"></script>
     <script src="js/lazyload.js"></script>
 </body>
 </html>
