--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,7 +13,7 @@
     <link href="css/large.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Itim&family=Josefin+Sans:ital,wght@1,300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
     rel="stylesheet"> 
 </head>
 <body>
@@ -47,10 +47,10 @@
         <div class="home-main">
             <section class="hero">
                 <picture class="hero-photo">
-                    <source media="(max-width: 200px)" srcset="images/small-200px.png">
-                    <source media="(max-width: 400px)" srcset="images/medium-400px.png">
-                    <source media="(max-width: 600px)" srcset="images/large-600px.png">
-                    <img src="images/wdd230-org(2).jpg" alt="wdd photo">
+                    <source media="(max-width: 500px)" srcset="images/small-200px.webp">
+                    <source media="(max-width: 829px)" srcset="images/medium-500px.webp">
+                    <source media="(max-width: 1500px)" srcset="images/large-800px.webp">
+                    <img src="images/wdd230-org.jpg" alt="image response">                    
                 </picture>
                 <!--<h2> Welcome to Guapiles </h2><select name="" id="" disabled="disabled"></select>-->
             </section>
@@ -82,7 +82,7 @@
             <section class="spotlight">
                 <h3 class="home-section-heading">SPOTLIGHT</h3>
                     <div class="spotlight-item">
-                        <img src="images/fair.png" alt="fair">
+                        <img src="images/fairy.png" alt="fair">
                         <p>Come to our monthly family fair <br>from 4pm to 8pm<br>
                         Location: Centro de Convenciones Pococi </p>
                     </div>
@@ -91,7 +91,7 @@
                         <p>Our agriculture fair is open to the public, come and support your locals</p>
                     </div>
                     <div class="spotlight-item" id="spotlight3">
-                        <img src="images/kids.png" alt="kids">
+                        <img src="images/kidszone.png" alt="kids">
                         <p>Kids have a workshop all second Satudays of the month.</p>
                     </div>
             </section>
