--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
 <body>
     
     <header>
-        <img src="images/logo-small-icon-only-inverted-webp.webp" alt="Guapiles Chamber of Commerce logo" class="logo">
+        <img src="images/logo.png" alt="Guapiles Chamber of Commerce logo" class="logo">
         <h1> Guapiles <span class="extra"><br> Chamber of Commerce </span></h1>
         <div class="social">
             <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook logo" class="icon"></a>
@@ -47,10 +47,10 @@
         <div class="home-main">
             <section class="hero">
                 <picture class="hero-photo">
-                    <source media="(max-width: 500px)" srcset="images/small-200px.webp">
-                    <source media="(max-width: 829px)" srcset="images/medium-500px.webp">
-                    <source media="(max-width: 1500px)" srcset="images/large-800px.webp">
-                    <img src="images/wdd230-org.jpg" alt="image response">                    
+                    <source media="(max-width: 500px)" srcset="images/manzanillo-200px.png">
+                    <source media="(max-width: 829px)" srcset="images/manzanillo-600px.png">
+                    <source media="(max-width: 1500px)" srcset="images/manzanillo-800px.png">
+                    <img src="images/manzanillo.jpg" alt="image response">                    
                 </picture>
                 <!--<h2> Welcome to Guapiles </h2><select name="" id="" disabled="disabled"></select>-->
             </section>
@@ -101,12 +101,12 @@
     <footer>
         <div class="top-footer">
             <section class="company">
-                <img src="images/logo-small-icon-only-inverted-webp.webp" alt="Guapiles logo" class="logo">
+                <img src="images/logo.png" alt="Guapiles logo" class="logo">
                 <h3> Guapiles Chamber of Commerce </h3>
                 <p> Centro de Convenciones Pococi</p>
             </section>
             <div class="contact">
-                <p class="contact-info"> guapiles@gmail.com </p>
+                <p class="contact-info"> guapileschamber@gmail.com </p>
                 <p class="contact-info"> (506) 210-5608</p>
             </div>
         </div>
