--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -13,7 +13,7 @@
     <link href="css/large.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Itim&family=Josefin+Sans:ital,wght@1,300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
     rel="stylesheet"> 
 </head>
 <body>
@@ -43,34 +43,13 @@
         <div class="banner">"🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m."</div>
     </header>
 
-    <main class="discover">
-        <div class="card">
-            <h3 class="discover-title">Visit the Rain Forest</h3>
-            <img src="https://via.placeholder.com/300x400" data-src="images/rainforest.png" width="300" height="300" alt="rainforest">
-            <p>Come and take a jump into the cold water after a 6km hike on the mountain to view the 80mts fall of this waterfall.</p>
-        </div>
-        <div class="card">
-            <h3 class="discover-title">Bird Watching</h3>
-            <img src="https://via.placeholder.com/300x400" data-src="images/birds.png" width="300" height="300" alt="birds">
-            <p>Our zone has one of the best spots for bird migration, so if you love to do bird watching here is the place.</p>
-        </div>
-        <div class="card">
-            <h3 class="discover-title">Rafting</h3>
-            <img src="https://via.placeholder.com/300x400" data-src="images/rafting.png" width="300" height="300" alt="rafting">
-            <p>Do you love extreme sports?  This is for you, our rivers are preferred to do rafting for fun.</p>
-        </div>
-        <div class="card">
-            <h3 class="discover-title">Rice & Beans </h3>
-            <img src="https://via.placeholder.com/300x400" data-src="images/rice-and-beans.png" width="300" height="300" alt="food">
-            <p>If you love to try different things this would be for you, our caribbean food has no competitors.</p>
-        </div>
-        <div class="card">
-            <h3 class="discover-title">Sloth Sanctuary</h3>
-            <img src="https://via.placeholder.com/300x400" data-src="images/sloth-sanctuary.png" width="300" height="300" alt="rainforest">
-            <p>Our sloth sanctuary believes on rescue those cute sloths who have suffered attacks from dogs or other 
-               predators to release them after they have been recovered.
-            </p>
-        </div>
+    <main class="thanks">
+        <section>
+            <h1>Thank you for joining our community! </h2>
+            <h3>Welcome to our chamber of commerce<br>we hope you can expand your business here.</h3>
+            <p>We've sent you an email to your inbox to complete the next steps to complete your application.</p>
+        </section>
+        
     </main>
 
     <footer>
@@ -91,7 +70,6 @@
     </footer>
     <script src="js/date.js"></script>
     <script src="js/ham.js"></script>
-    <script src="js/pagevisited.js"></script>
-    <script src="js/lazyload.js"></script>
+    <script src="js/windchill.js"></script>
 </body>
 </html>
