--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>Lesson 05:<a href="bom/bom.html"> Book of Mormon Top 5</a> | <a href="chamber/index.html">Content and Banner</a></li>
             <li>Lesson 06:<a href="chamber/index.html"> Responsive Design</a></li>
             <li>Lesson 07:<a href="lesson7/lazyload.html"> Lazy Load Images</a>| <a href="chamber/discover.html">Discover</a></li>
-            <li>Lesson 08:<a href="lesson8/tablebuild.html">HTML Table Build</a></li>
+            <li>Lesson 08:<a href="lesson8/tablebuild.html">HTML Table Build</a>| <a href="chamber/join.html">Join</a></li>
             <li>Lesson 09:<a href=""> Title</a></li>
             <li>Lesson 10:<a href=""> Title</a></li>
             <li>Lesson 11:<a href=""> Title</a></li>
