--- a/chamber/join.html
+++ b/chamber/join.html
@@ -110,8 +110,8 @@
                 <label class="sbs"><input type="radio" name="membership" value="bronze">Bronze Membership</label>
                 <label class="sbs"><input type="radio" name="membership" value="silver">Silver Membership</label>
                 <label class="sbs"><input type="radio" name="membership" value="gold">Gold Membership</label>
-                <label class="top">Business Description</label>
-                <textarea name="description" class="top" cols="30" rows="10"></textarea>
+                <label class="top">Business Description <br><textarea cols="38" rows="10" name="bus-description"></textarea></label>
+                
                 <input type="hidden" id="date" name="date" value="">
 
                 <input type="submit" value="Join chamber" class="submitBtn">
