--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,7 +45,7 @@
 
     <main class="discover">
         <section class="card-content">
-            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rainforest.png" width="400" height="300" alt="rainforest">
+            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rainforest.png" alt="rainforest">
             <h3 class="discover-title">Visit the Rain Forest</h3>
             <p>Pococí has an area of 2,403.49 km2 and a mean elevation of 134 metres.
             The canton takes in the Caribbean coast from the Toro River northward to the border with Nicaragua. 
@@ -55,7 +55,7 @@
         </section>
 
         <section class="card-content">
-            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/birds.png" width="400" height="300" alt="birds">
+            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/birds.png" alt="birds">
             <h3 class="discover-title">Bird Watching</h3>
             <p>Costa Rica, home to an incredible 850 different bird species, is a birdwatcher’s paradise. From the tropical rain forests of the Nicoya Peninsula to the mountaintop
             <br>cloud forests around San Jose and the sun-soaked jungle along the Caribbean Coast, here are the best places for birding in Costa Rica.
@@ -64,7 +64,7 @@
         </section>    
 
         <section class="card-content">
-            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rafting.png" width="400" height="300" alt="rafting">
+            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rafting.png" alt="rafting">
             <h3 class="discover-title">Rafting</h3>
             <p>The Pacuare River is the best choice for rafting in Costa Rica. No other adventure trek in the country exists that offers you a perfect blend of wilderness exposure and excitement, all in one day.
 
@@ -74,7 +74,7 @@
         </section>
 
         <section class="card-content">
-            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rice-and-beans.png" width="400" height="300" alt="food">
+            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rice-and-beans.png" alt="food">
             <h3 class="discover-title">Rice & Beans </h3>
             <p>Food in Costa Rica is second only to the country’s beauty. Known for its use of fresh ingredients, like fruits and vegetables, the cuisine in Costa Rica is generally on the mild side.
 
@@ -85,7 +85,7 @@
         </section>
 
         <section class="card-content">
-            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/sloth-sanctuary.png" width="400" height="300" alt="rainforest">
+            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/sloth-sanctuary.png" alt="rainforest">
             <h3 class="discover-title">Sloth Sanctuary</h3>
             <p>Our sloth sanctuary believes on rescue those cute sloths who have suffered attacks from dogs or other 
                 predators to release them after they have been recovered. <br>Of the two families of sloths found in Costa Rica, Bradypus variegatus 
