--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -65,7 +65,7 @@
         </table> 
     </main> 
     <footer>
-        <a href="/index.html">My Portal</a>
+        <a href="/wdd230/">My Portal</a>
     </footer>  
 </body>
 </html>
