--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,7 +42,7 @@
 
         <div class="banner">"🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m."</div>
     </header>
-        <h1>Business Directory</h1>
+        <h1 class="business">Business Directory</h1>
     <main>
         <div class="directory">
             <div class="list-view-btn">
