--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,17 +45,17 @@
 
     <main class="discover">
         <section class="card-content">
-            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rainforest.png" alt="rainforest">
+            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rainforest.png" width="300" height="300" alt="rainforest">
             <h3 class="discover-title">Visit the Rain Forest</h3>
             <p>Pococí has an area of 2,403.49 km2 and a mean elevation of 134 metres.
             The canton takes in the Caribbean coast from the Toro River northward to the border with Nicaragua. 
             It ranges inland in a southwestern direction with the Chirripó River forming the western border. The canton ends in the Cordillera Central
             where the Sucio River crosses the National Route 32 in Braulio Carrillo National Park.</p>
-            <p>Come and take a jump into the cold water after a 6km hike on the mountain to view the 80mts fall of this waterfall.</p>                     
+>                     
         </section>
 
         <section class="card-content">
-            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/birds.png" alt="birds">
+            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/birds.png" width="300" height="300" alt="birds">
             <h3 class="discover-title">Bird Watching</h3>
             <p>Costa Rica, home to an incredible 850 different bird species, is a birdwatcher’s paradise. From the tropical rain forests of the Nicoya Peninsula to the mountaintop
             <br>cloud forests around San Jose and the sun-soaked jungle along the Caribbean Coast, here are the best places for birding in Costa Rica.
@@ -64,17 +64,17 @@
         </section>    
 
         <section class="card-content">
-            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rafting.png" alt="rafting">
+            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rafting.png" width="300" height="300" alt="rafting">
             <h3 class="discover-title">Rafting</h3>
             <p>The Pacuare River is the best choice for rafting in Costa Rica. No other adventure trek in the country exists that offers you a perfect blend of wilderness exposure and excitement, all in one day.
 
                 Pacuare is world famous for its sheer beauty. A true river gorge, it is flanked by steep, green walls. Here you enjoy the feeling of total isolation from urban life and the realness of being connected with nature.
-                <br>You see waterfalls cascade into the river from both sides as colorful, tropical birds fly right over your head. Amazing views of this virgin tropical rainforest area, appear before your eyes as you descend 
+                You see waterfalls cascade into the river from both sides as colorful, tropical birds fly right over your head. Amazing views of this virgin tropical rainforest area, appear before your eyes as you descend 
                 this true exploratory land. Wildlife is abundant, with sloth, toucans, parrots, coatis, morpho butterflies and colorful frogs being common sights.</p>                         
         </section>
 
         <section class="card-content">
-            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rice-and-beans.png" alt="food">
+            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rice-and-beans.png" width="300" height="300" alt="food">
             <h3 class="discover-title">Rice & Beans </h3>
             <p>Food in Costa Rica is second only to the country’s beauty. Known for its use of fresh ingredients, like fruits and vegetables, the cuisine in Costa Rica is generally on the mild side.
 
@@ -85,15 +85,14 @@
         </section>
 
         <section class="card-content">
-            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/sloth-sanctuary.png" alt="rainforest">
+            <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/sloth-sanctuary.png" width="300" height="300" alt="rainforest">
             <h3 class="discover-title">Sloth Sanctuary</h3>
             <p>Our sloth sanctuary believes on rescue those cute sloths who have suffered attacks from dogs or other 
-                predators to release them after they have been recovered. <br>Of the two families of sloths found in Costa Rica, Bradypus variegatus 
-                (Three-fingered sloth) is the more familiar to most people. Hair is gray/brown with a darker face, white forehead and raccoon-like band around the eyes. 
-                The hair on the head tends to form a fringe that frames the forehead.
-                Arms nearly twice as long as legs. Head to tail length 400–690 mm, Weight 6.5 kg maximum.
-                Active during day and night, Bradypus is a strict vegetarian and selective about its choices. 
-                Bradypus may eat up to 96 varieties of leaves, however, each individual typically selects from just 5 or 6 different tree species. </p>        
+            predators to release them after they have been recovered. Of the two families of sloths found in Costa Rica, Bradypus variegatus 
+            (Three-fingered sloth) is the more familiar to most people. Hair is gray/brown with a darker face, white forehead and raccoon-like band around the eyes. 
+            The hair on the head tends to form a fringe that frames the forehead. Arms nearly twice as long as legs. Head to tail length 400–690 mm, Weight 6.5 kg maximum.
+            Active during day and night, Bradypus is a strict vegetarian and selective about its choices. Bradypus may eat up to 96 varieties of leaves, however, 
+            each individual typically selects from just 5 or 6 different tree species. </p>        
         </section>
         <p id="sameday"> You visited this page <span id="lastvisit"></span> days ago.</p>
     </main>
