--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,7 +52,7 @@
                     <source media="(max-width: 1500px)" srcset="images/manzanillo-800px.png">
                     <img src="images/manzanillo.jpg" alt="image response">                    
                 </picture>
-                <!--<h2> Welcome to Guapiles </h2><select name="" id="" disabled="disabled"></select>-->
+                <h2> Welcome to Guapiles </h2>
             </section>
             <section class="event">
                 <h3> EVENTS </h3>
