--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li>Lesson 07:<a href="lesson7/lazyload.html"> Lazy Load Images</a> | <a href="chamber/discover.html">Discover</a></li>
             <li>Lesson 08:<a href="lesson8/tablebuild.html">HTML Table Build</a>| <a href="chamber/join.html">Join</a></li>
             <li>Lesson 09:<a href="lesson9/prophets.html"> Prophets-JSON | <a href="chamber/directory.html">Directory</a></a></li>
-            <li>Lesson 10:<a href=""> Title</a></li>
+            <li>Lesson 10:<a href="lesson10/weather-api.html.html"> Weather API</a></li>
             <li>Lesson 11:<a href=""> Title</a></li>
             <li>Lesson 12:<a href=""> Title</a></li>      
             
