--- a/chamber/join.html
+++ b/chamber/join.html
@@ -96,8 +96,8 @@
             </div>
         </section>
         <form method="get" action="thankyou.html">
-            <fieldset>
-                <h3 class="join-us">Join Our Chamber</h3>
+            <fieldset> 
+                <legend>Personal Information</legend>
                 <label class="top">First Name*<input type="text" name="fname" required></label>
                 <label class="top">Last Name*<input type="text" name="lname" required></label>
                 <label class="top">Email*<input type="email" name="email" placeholder="someone@gmail.com"></label>
@@ -105,17 +105,19 @@
             </fieldset>
                 
             <fieldset>
+                <legend>Business Information</legend>
                 <label class="top">Business Name*<input type="text" name="businessname" required></label>
                 <label class="top">Business Title<input type="text" name="businesstitle" pattern="[A-Za-z0-7+"></label>
                 <label class="top">Business Description <br><textarea cols="38" rows="10" name="bus-description"></textarea></label>
             </fieldset> 
 
-                <div> Memberships </div>
+            <fieldset>
+                <legend>Membership Information</legend>
                 <label class="sbs"><input type="radio" name="membership" value="nonprofit">NP</label>
                 <label class="sbs"><input type="radio" name="membership" value="bronze">Bronze Membership</label>
                 <label class="sbs"><input type="radio" name="membership" value="silver">Silver Membership</label>
                 <label class="sbs"><input type="radio" name="membership" value="gold">Gold Membership</label>
-
+            </fieldset>
                 <input type="hidden" id="date" name="date" value="">
 
                 <input type="submit" value="Join chamber" class="submitBtn">
