--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -89,10 +89,9 @@
             <h3 class="discover-title">Sloth Sanctuary</h3>
             <p>Our sloth sanctuary believes on rescue those cute sloths who have suffered attacks from dogs or other 
             predators to release them after they have been recovered. Of the two families of sloths found in Costa Rica, Bradypus variegatus 
-            (Three-fingered sloth) is the more familiar to most people. Hair is gray/brown with a darker face, white forehead and raccoon-like band around the eyes. 
-            The hair on the head tends to form a fringe that frames the forehead. Arms nearly twice as long as legs. Head to tail length 400–690 mm, Weight 6.5 kg maximum.
-            Active during day and night, Bradypus is a strict vegetarian and selective about its choices. Bradypus may eat up to 96 varieties of leaves, however, 
-            each individual typically selects from just 5 or 6 different tree species. </p>        
+            (Three-fingered sloth) is the more familiar to most people.<br>Hair is gray/brown with a darker face, white forehead and raccoon-like band around the eyes. 
+            The hair on the head tends to form a fringe that frames the forehead. Arms nearly twice as long as legs.<br> Head to tail length 400–690 mm, Weight 6.5 kg maximum.
+            Active during day and night, Bradypus is a strict vegetarian and selective about its choices.</p>        
         </section>
         <p id="sameday"> You visited this page <span id="lastvisit"></span> days ago.</p>
     </main>
