--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,13 +46,14 @@
     <main>
         <div class="home-main">
             <section class="hero">
+                <h2> Welcome to Guapiles </h2>
                 <picture class="hero-photo">
                     <source media="(max-width: 500px)" srcset="images/manzanillo-200px.png">
                     <source media="(max-width: 829px)" srcset="images/manzanillo-600px.png">
                     <source media="(max-width: 1500px)" srcset="images/manzanillo-800px.png">
-                    <img src="images/manzanillo.jpg" alt="image response">                    
+                    <img src="images/manzanillo.jpg" alt="image response">                   
                 </picture>
-                <h2> Welcome to Guapiles </h2>
+                <a href="join.html" class="join-button button-link"> Join the Chamber </a> 
             </section>
             <section class="event">
                 <h3> EVENTS </h3>
@@ -75,9 +76,11 @@
             <section class="news">
                 <h3> NEWS </h3>
                 <img src="images/news-letter.png" alt="news info" id="infoicon">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum iure autem, 
-                    consectetur et corporis aut dolorem delectus sequi. Quaerat exercitationem, 
-                    maiores nisi ea suscipit amet sunt possimus laudantium libero vel.</p>
+                <p>As holidays come closer we have prepared some activities that we want anyone 
+                    to come and share these wonderful times as families.<br>  Come and join us on
+                    our parades, our yearly fair of enterprenurs and a lot of actiities for all
+                    ages.
+                </p>
             </section>
             <section class="spotlight">
                 <h3 class="home-section-heading">SPOTLIGHT</h3>
