--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -55,6 +55,25 @@
                 <input type="submit" value="Contact Us" class="submitBtn">
             </fieldset>    
         </form>
+        <section>
+            <h3 class="general-query">General Inquiries</h3>
+            <p>If you have any question or feel unsure how to sign in to the Chamber<br>
+            let us help you before you take a decision, our board of members are<br>
+            happy to help with any question you might have.</p>
+            <lu>
+                <li>Board of Members</li>
+                <p>Reach us at: <br> boardqueries@pococichamber.org</p>
+
+                <li>Membership Questions</li>
+                <p>Reach us at: <br> membershipsQA@pococichamber.org</p>
+
+                <li>Enterprenurs</li>
+                <p>Reach us at: <br> entreprenurqueries@pococichamber.org</p>
+
+                <li>Logging Issues</li>
+                <p>Reach us at: <br> ItGuapilesChamber@pococichamber.org</p>
+            </lu>
+        </section>
 
         <section class="contact-info">
             <div>
@@ -67,9 +86,10 @@
                 <p class="visit-info">Gloria Rosado</p>
                 <p class="visit-info">Phone 8345-2358<br>GuapilesChamber@pococi.org</p>
             </div>
-
         </section>
-
+        <section>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3926.4173370956896!2d-83.78045828541613!3d10.227885392695132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0b83c1d742869%3A0xddc11e5cf7fc29d6!2sCentro%20Civico%20Pococi!5e0!3m2!1ses!2scr!4v1669334163347!5m2!1ses!2scr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
     </main>
 
     <footer>
