--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li>Lesson 08:<a href="lesson8/tablebuild.html">HTML Table Build</a>| <a href="chamber/join.html">Join</a></li>
             <li>Lesson 09:<a href="lesson9/prophets.html"> Prophets-JSON | <a href="chamber/directory.html">Directory</a></a></li>
             <li>Lesson 10:<a href="lesson10/weather-api.html.html"> Weather API |  <a href="chamber/index.html">Using Weather API</a></li>
-            <li>Lesson 11:<a href=""> Title</a></li>
+            <li>Lesson 11:<a href="index.html"> Chamber of Commerce</a></li>
             <li>Lesson 12:<a href=""> Title</a></li>      
             
         </ul>
