--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,7 +78,7 @@
                 <img src="images/news-letter.png" alt="news info" id="infoicon">
                 <p>As holidays come closer we have prepared some activities that we want anyone 
                     to come and share these wonderful times as families.<br>  Come and join us on
-                    our parades, our yearly fair of enterprenurs and a lot of actiities for all
+                    our parades, our yearly fair of enterprenurs and a lot of activities for all
                     ages.
                 </p>
             </section>
