--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -50,38 +50,33 @@
             <p>Pococí has an area of 2,403.49 km2 and a mean elevation of 134 metres.
             The canton takes in the Caribbean coast from the Toro River northward to the border with Nicaragua. 
             It ranges inland in a southwestern direction with the Chirripó River forming the western border. The canton ends in the Cordillera Central
-            where the Sucio River crosses the National Route 32 in Braulio Carrillo National Park.</p>
->                     
+            where the Sucio River crosses the National Route 32 in Braulio Carrillo National Park.</p>                     
         </section>
 
         <section class="card-content">
             <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/birds.png" width="300" height="300" alt="birds">
             <h3 class="discover-title">Bird Watching</h3>
             <p>Costa Rica, home to an incredible 850 different bird species, is a birdwatcher’s paradise. From the tropical rain forests of the Nicoya Peninsula to the mountaintop
-            <br>cloud forests around San Jose and the sun-soaked jungle along the Caribbean Coast, here are the best places for birding in Costa Rica.
-            <br>Ride an aerial tram through the jungle and hike along the Corinto River in the Braulio Carrillo National Park, spotting colorful birds with the help of an expert guide along the way. 
-            Keep an eye out for rarely sighted species such as the bare-necked umbrellabird, the black-crowned antpitta, and the nightingale wren in this top Costa Rican birding destination.</p>
+            cloud forests around San Jose and the sun-soaked jungle along the Caribbean Coast, here are the best places for birding in Costa Rica.
+            Ride an aerial tram through the jungle and hike along the Corinto River in the Braulio Carrillo National Park, spotting colorful birds with the help of an expert guide along the way. 
+            Keep an eye out for rarely sighted species such as the bare-necked umbrellabird.</p>
         </section>    
 
         <section class="card-content">
             <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rafting.png" width="300" height="300" alt="rafting">
             <h3 class="discover-title">Rafting</h3>
             <p>The Pacuare River is the best choice for rafting in Costa Rica. No other adventure trek in the country exists that offers you a perfect blend of wilderness exposure and excitement, all in one day.
-
                 Pacuare is world famous for its sheer beauty. A true river gorge, it is flanked by steep, green walls. Here you enjoy the feeling of total isolation from urban life and the realness of being connected with nature.
-                You see waterfalls cascade into the river from both sides as colorful, tropical birds fly right over your head. Amazing views of this virgin tropical rainforest area, appear before your eyes as you descend 
-                this true exploratory land. Wildlife is abundant, with sloth, toucans, parrots, coatis, morpho butterflies and colorful frogs being common sights.</p>                         
+                You see waterfalls cascade into the river from both sides as colorful, tropical birds fly right over your head.</p>                         
         </section>
 
         <section class="card-content">
             <img class="image-discover" src="https://via.placeholder.com/300x400" data-src="images/rice-and-beans.png" width="300" height="300" alt="food">
             <h3 class="discover-title">Rice & Beans </h3>
             <p>Food in Costa Rica is second only to the country’s beauty. Known for its use of fresh ingredients, like fruits and vegetables, the cuisine in Costa Rica is generally on the mild side.
-
-                <br> Costa Rican food is much different than other Latin American food, especially Mexican food. Of course, Mexico is not the only place to find its spicy food. 
-                San Diego which is just north of Mexico is also known for its Mexican and Latin American influence in its cuisine.
-                
-                <br>Exotic fruits grow locally in the tropical environment, so there is always something to make the food exciting.</p>                    
+             Costa Rican food is much different than other Latin American food, especially Mexican food. Of course, Mexico is not the only place to find its spicy food. 
+             San Diego which is just north of Mexico is also known for its Mexican and Latin American influence in its cuisine.
+             <br>Exotic fruits grow locally in the tropical environment, so there is always something to make the food exciting.</p>                    
         </section>
 
         <section class="card-content">
@@ -89,9 +84,9 @@
             <h3 class="discover-title">Sloth Sanctuary</h3>
             <p>Our sloth sanctuary believes on rescue those cute sloths who have suffered attacks from dogs or other 
             predators to release them after they have been recovered. Of the two families of sloths found in Costa Rica, Bradypus variegatus 
-            (Three-fingered sloth) is the more familiar to most people.<br>Hair is gray/brown with a darker face, white forehead and raccoon-like band around the eyes. 
-            The hair on the head tends to form a fringe that frames the forehead. Arms nearly twice as long as legs.<br> Head to tail length 400–690 mm, Weight 6.5 kg maximum.
-            Active during day and night, Bradypus is a strict vegetarian and selective about its choices.</p>        
+            (Three-fingered sloth) is the more familiar to most people. Hair is gray/brown with a darker face, white forehead and raccoon-like band around the eyes. 
+            The hair on the head tends to form a fringe that frames the forehead. Arms nearly twice as long as legs. Head to tail length 400–690 mm, Weight 6.5 kg maximum.
+            Active during day and night.</p>        
         </section>
         <p id="sameday"> You visited this page <span id="lastvisit"></span> days ago.</p>
     </main>
